refactor: 백엔드 패키지 구조 리팩토링 및 문서화
- core/application/order 패키지 service/adapter/mapper/dto/event 서브패키지로 분리
- AbstractOrderSyncService 삭제, 각 SyncService 완전 독립화
- domain.order.dto → application.order.dto 이동
- infrastructure cafe24/auth → cafe24, scraper → customs 정리
- api controller/product 통합, controller/dto 빈 디렉토리 삭제
- EmailAccountProperties core/config로 통합 (api/worker 중복 제거)
- OrderGridDto → OrderDetailDto 계층형 구조로 변경 (MarketRegistration 포함)
- QueryDSL 쿼리 3→2개로 최적화
- docs/project-analysis.md 프로젝트 분석 문서 추가
- docs/api/order-controller-sequence.md Mermaid 시퀀스 다이어그램 추가